# AutoTok

./: .env.example  .gitignore  AGENTS.md  AUTOTOK_PHASE_ROADMAP.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ANALYTICS.md  ARCHITECTURE.md  OPERATIONS.md  PHASES.md  PUBLISHING.md  STATUS.md  TIKTOK_REVIEW_DEMO.md  index.html  privacy.html  styles.css  terms.html  tiktokknkIZ4LuFXRddPlw4eXGfgGzt05kCksX.txt
src/autotok/: __init__.py  __main__.py  analytics.py  analytics_models.py  analytics_storage.py  audio_models.py  audio_probe.py  audio_storage.py  cli.py  config.py  content_gate_models.py  content_gate_storage.py  content_gates.py  errors.py  ingestion.py  job_models.py  job_orchestration.py  job_storage.py  logging.py  media_models.py  media_probe.py  media_selection.py  media_storage.py  models.py  normalization.py  operations.py  publishing.py  publishing_models.py  publishing_storage.py  render.py  render_models.py  render_storage.py  review_api.py  review_models.py  review_server.py  review_storage.py  script_models.py  (+11 more)
tests/: test_analytics.py  test_audio.py  test_cli.py  test_config.py  test_content_gates.py  test_ingestion_storage.py  test_job_orchestration.py  test_job_storage.py  test_media.py  test_normalization.py  test_operations.py  test_phase2_cli.py  test_phase3_cli.py  test_phase4_cli.py  test_phase5_cli.py  test_phase6_cli.py  test_phase6_helpers.py  test_phase7_cli.py  test_phase8_cli.py  test_phase9_cli.py  test_publishing.py  test_render.py  test_review.py  test_source_ingestion.py  test_subtitles.py  test_transform.py
(+1 files in other folders)
