[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "autotok"
version = "0.1.0"
description = "Local-first short-form video pipeline foundation."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "AutoTok contributors" }]
dependencies = []

[project.optional-dependencies]
tts = [
  "pyttsx3>=2.90",
]

dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
autotok = "autotok.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --basetemp=.pytest-tmp"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["autotok"]
